--- a/po/sk.po
+++ b/po/sk.po
@@ -4,14 +4,14 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-06 20:06+0200\n"
-"PO-Revision-Date: 2020-05-04 16:00+0200\n"
+"PO-Revision-Date: 2020-05-07 13:43+0200\n"
 "Last-Translator: Andrej Tobola <andrej.tobola@gmail.com>\n"
 "Language-Team: \n"
 "Language: sk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2\n"
+"X-Generator: Poedit 2.2.1\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
 msgid ""
@@ -1870,9 +1870,8 @@ msgstr "Nastavenie zostavy"
 msgid "Colombia"
 msgstr "Koumbia"
 
-#, fuzzy
 msgid "Color"
-msgstr "Koumbia"
+msgstr "Farba"
 
 msgid "Color format"
 msgstr "Formát farieb"
@@ -9377,9 +9376,8 @@ msgstr "Prepnúť zobraziť/skryť"
 msgid "Toggle the tv and the radio player..."
 msgstr "Prepnúť TV a Rádio prehrávač..."
 
-#, fuzzy
 msgid "Toggle videomode"
-msgstr "Zvoľte režim obrazu"
+msgstr "Prepnúť videorežim"
 
 msgid "Togo"
 msgstr "Togo"
