--- a/po/cs.po
+++ b/po/cs.po
@@ -2129,9 +2129,8 @@ msgid "Colombia"
 msgstr "Kolumbie"
 
 #
-#, fuzzy
 msgid "Color"
-msgstr "Kolumbie"
+msgstr "Barva"
 
 #
 msgid "Color format"
@@ -10097,7 +10096,7 @@ msgstr ""
 "Pro případné korekce můžete kontaktovat autora\n"
 "na výše uvedené adrese.\n"
 "\n"
-"®3.5.2020"
+"®7.5.2020"
 
 #
 msgid "TS file is too large for ISO9660 level 1!"
@@ -10788,9 +10787,8 @@ msgid "Toggle the tv and the radio player..."
 msgstr "Přepínat mezi TV a Rádio přehrávačem..."
 
 #
-#, fuzzy
 msgid "Toggle videomode"
-msgstr "Zvolte video mód"
+msgstr "Přepínat video mód"
 
 msgid "Togo"
 msgstr "Togo"
