--- a/po/cs.po
+++ b/po/cs.po
@@ -4585,7 +4585,7 @@ msgid "Goto:"
 msgstr "Na:"
 
 msgid "GotoX calibration"
-msgstr "Kalibrace Přejít na X"
+msgstr "Kalibrace 'Přejít na X'"
 
 msgid "GraphMultiEpg Settings"
 msgstr "Nastavení GraphMultiEPG"
@@ -5872,7 +5872,7 @@ msgstr "Posunout obraz v obraze"
 
 #
 msgid "Move east"
-msgstr "Posun východně"
+msgstr "Přetočit východně"
 
 msgid "Move the keyboard cursor down"
 msgstr "Dolů"
@@ -5919,7 +5919,7 @@ msgstr "Přesun na předchozí skin"
 
 #
 msgid "Move west"
-msgstr "Posun západně"
+msgstr "Přetočit západně"
 
 msgid "Moved to position 0"
 msgstr "Natáčí se na pozici 0"
@@ -5951,13 +5951,13 @@ msgid "Moving"
 msgstr "Natáčení"
 
 msgid "Moving east ..."
-msgstr "Natáčení na východ ..."
+msgstr "Natáčí se na východ ..."
 
 msgid "Moving to position"
 msgstr "Natáčení na pozici"
 
 msgid "Moving west ..."
-msgstr "Natáčení na západ ..."
+msgstr "Natáčí se na západ ..."
 
 msgid "Mozambique"
 msgstr "Mosambik"
@@ -7352,7 +7352,7 @@ msgid "Press OK to toggle the selection."
 msgstr "Stiskněte OK pro změnu označení."
 
 msgid "Press OK, save and exit..."
-msgstr "Stisknout OK, uložit a zavřít..."
+msgstr "Stisknutím OK nastavte a zavřete..."
 
 msgid "Press or select button and then press 'OK' for attach function."
 msgstr "Stiskněte nebo zvolte tlačítko a stiskněte OK pro připojení funkce."
@@ -8343,17 +8343,17 @@ msgstr "Vyhledat"
 
 #
 msgid "Search east"
-msgstr "Hledej východ"
+msgstr "Hledat východně"
 
 #
 msgid "Search west"
-msgstr "Hledej západ"
+msgstr "Hledat západně"
 
 msgid "Searching"
 msgstr "Hledání"
 
 msgid "Searching east ..."
-msgstr "Hledání na východ ..."
+msgstr "Hledání východně ..."
 
 #
 msgid "Searching for available updates. Please wait..."
@@ -8364,7 +8364,7 @@ msgid "Searching for new installed or removed packages. Please wait..."
 msgstr "Vyhledávám nově instalované nebo odstraněné balíčky. Čekejte, prosím..."
 
 msgid "Searching west ..."
-msgstr "Hledání na západ ..."
+msgstr "Hledání západně ..."
 
 #
 msgid "Second cable of motorized LNB"
@@ -10096,7 +10096,7 @@ msgstr ""
 "Pro případné korekce můžete kontaktovat autora\n"
 "na výše uvedené adrese.\n"
 "\n"
-"®7.5.2020"
+"®10.5.2020"
 
 #
 msgid "TS file is too large for ISO9660 level 1!"
