all po files updated from develop at 2020-05-10 20:22

--- a/po/cs.po
+++ b/po/cs.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-05-06 20:06+0200\n"
+"POT-Creation-Date: 2020-05-10 20:18+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: ims <ims21@users.sourceforge.net>\n"
 "Language-Team: PLi <ims@openpli.org>\n"
@@ -1199,6 +1199,11 @@ msgstr "Jakákoliv aktivita"
 msgid "Arabic"
 msgstr "Arabsky"
 
+#
+#, fuzzy
+msgid "Are you sure to delete image:"
+msgstr "Opravdu chcete restartovat do"
+
 msgid "Are you sure to purge all deleted user bouquets?"
 msgstr "Opravdu chcete odstranit všechny smazané přehledy?"
 
@@ -1219,6 +1224,10 @@ msgstr "Opravdu smazat všechny programy pozemního vysílání?"
 #
 msgid "Are you sure to remove this entry?"
 msgstr "Opravdu chcete odstranit tuto položku?"
+
+#, fuzzy
+msgid "Are you sure to restore all deleted images"
+msgstr "Opravdu smazat všechny programy kabelové televize?"
 
 #
 msgid ""
@@ -3011,6 +3020,10 @@ msgstr "Zpoždění v milisekundách mezi přetáčením znaků na displeji."
 msgid "Delete"
 msgstr "Smazat"
 
+#, fuzzy
+msgid "Delete Image"
+msgstr "Odstranit image"
+
 #
 msgid "Delete entry"
 msgstr "smazat položku"
@@ -3049,6 +3062,10 @@ msgstr "Odstranit časovač"
 
 msgid "Deleted"
 msgstr "Mazáno"
+
+#, fuzzy
+msgid "Deleted image"
+msgstr "Odstranit image"
 
 #
 msgid "Deleted items"
@@ -7933,6 +7950,10 @@ msgstr "Obnovit zálohu"
 msgid "Restore defaults"
 msgstr "Obnovit výchozí"
 
+#, fuzzy
+msgid "Restore deleted images"
+msgstr "Obnovit smazané přehledy"
+
 msgid "Restore deleted user bouquets"
 msgstr "Obnovit smazané přehledy"
 
@@ -7973,9 +7994,6 @@ msgstr "Obnovuji přehrávání"
 
 msgid "Retrieving image list - Please wait..."
 msgstr "Načítání seznamu image - čekejte, prosím ..."
-
-msgid "Retrieving image slots - Please wait..."
-msgstr "Načítají se sloty obrazů - Čekejte prosím ..."
 
 #
 msgid "Return to movie list"
