--- a/po/nl.po
+++ b/po/nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-05-06 20:06+0200\n"
+"POT-Creation-Date: 2020-05-10 20:18+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Frenske <voorzitter@openpli.org>\n"
 "Language-Team: PLiteam <translators@openpli.org>\n"
@@ -1045,6 +1045,10 @@ msgstr "Elke activiteit"
 msgid "Arabic"
 msgstr "Arabisch"
 
+#, fuzzy
+msgid "Are you sure to delete image:"
+msgstr "Wilt u zeker herstarten naar"
+
 msgid "Are you sure to purge all deleted user bouquets?"
 msgstr "Wilt u de gewiste bouquetten definitief verwijderen?"
 
@@ -1063,6 +1067,10 @@ msgstr "Wilt u definitief alle DVB-T zenders verwijderen?"
 
 msgid "Are you sure to remove this entry?"
 msgstr "Weet u zeker dat u dit item wilt verwijderen?"
+
+#, fuzzy
+msgid "Are you sure to restore all deleted images"
+msgstr "Wilt u definitief alle kabelzenders verwijderen?"
 
 msgid ""
 "Are you sure you want to activate this network configuration?\n"
@@ -2816,6 +2824,10 @@ msgstr "De onderlinge vertraging in msec tussen de scrollende karakters op het d
 msgid "Delete"
 msgstr "Verwijderen"
 
+#, fuzzy
+msgid "Delete Image"
+msgstr "Image verwijderen"
+
 msgid "Delete entry"
 msgstr "Verwijder de invoer"
 
@@ -2850,6 +2862,10 @@ msgstr "Verwijder timer"
 
 msgid "Deleted"
 msgstr "Verwijderd"
+
+#, fuzzy
+msgid "Deleted image"
+msgstr "Image verwijderen"
 
 msgid "Deleted items"
 msgstr "Verwijderde bestanden"
@@ -7108,6 +7124,10 @@ msgstr "Backups terugzetten"
 msgid "Restore defaults"
 msgstr "Herstel de standaardwaarden"
 
+#, fuzzy
+msgid "Restore deleted images"
+msgstr "Herstel verwijderde gebruikersbouquet(ten)"
+
 msgid "Restore deleted user bouquets"
 msgstr "Herstel verwijderde gebruikersbouquet(ten)"
 
@@ -7142,9 +7162,6 @@ msgstr "Afspelen wordt hervat"
 
 msgid "Retrieving image list - Please wait..."
 msgstr "De gegevens worden opgehaald. Een ogenblik geduld aub..."
-
-msgid "Retrieving image slots - Please wait..."
-msgstr "De slotinfo wordt opgehaald. Een ogenblik geduld aub..."
 
 msgid "Return to movie list"
 msgstr "Terug naar de opnamelijst"
