--- a/po/sk.po
+++ b/po/sk.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-05-06 20:06+0200\n"
+"POT-Creation-Date: 2020-05-10 20:18+0200\n"
 "PO-Revision-Date: 2020-05-10 09:03+0200\n"
 "Last-Translator: Andrej Tobola <andrej.tobola@gmail.com>\n"
 "Language-Team: \n"
@@ -1056,6 +1056,10 @@ msgstr "Akákoľvek aktivita"
 msgid "Arabic"
 msgstr "Arabčina"
 
+#, fuzzy
+msgid "Are you sure to delete image:"
+msgstr "Naozaj chcete reštartovať"
+
 msgid "Are you sure to purge all deleted user bouquets?"
 msgstr "Naozaj chcete natrvalo odstrániť všetky zmazané zoznamy staníc?"
 
@@ -1074,6 +1078,10 @@ msgstr "Naozaj chcete odstrániť všetky stanice pozemnej televízie?"
 
 msgid "Are you sure to remove this entry?"
 msgstr "Naozaj chcete odstrániť túto položku?"
+
+#, fuzzy
+msgid "Are you sure to restore all deleted images"
+msgstr "Naozaj chcete odstrániť všetky stanice káblovej televízie?"
 
 msgid ""
 "Are you sure you want to activate this network configuration?\n"
@@ -2650,6 +2658,10 @@ msgstr "Oneskorenie v milisekundách medzi posúvajúcimi sa znakmi na displeji.
 msgid "Delete"
 msgstr "Vymazať"
 
+#, fuzzy
+msgid "Delete Image"
+msgstr "Vymazať image"
+
 msgid "Delete entry"
 msgstr "Vymazať zadanie"
 
@@ -2682,6 +2694,10 @@ msgstr "Zmazať časovač"
 
 msgid "Deleted"
 msgstr "Zmazané"
+
+#, fuzzy
+msgid "Deleted image"
+msgstr "Vymazať image"
 
 msgid "Deleted items"
 msgstr "Zmazané položky"
@@ -6867,6 +6883,10 @@ msgstr "Obnoviť zálohy"
 msgid "Restore defaults"
 msgstr "Obnoviť predvolené"
 
+#, fuzzy
+msgid "Restore deleted images"
+msgstr "Obnoviť zmazané užívateľské zoznamy staníc"
+
 msgid "Restore deleted user bouquets"
 msgstr "Obnoviť zmazané užívateľské zoznamy staníc"
 
@@ -6901,9 +6921,6 @@ msgstr "Pokračujem v prehrávaní"
 
 msgid "Retrieving image list - Please wait..."
 msgstr "Načítavanie dostupného softvéru - prosím čakajte..."
-
-msgid "Retrieving image slots - Please wait..."
-msgstr "Načítavam sloty image - Prosím čakajte..."
 
 msgid "Return to movie list"
 msgstr "Návrat do zoznamu filmov"
