update cs translate

--- a/po/cs.po
+++ b/po/cs.po
@@ -1200,9 +1200,8 @@ msgid "Arabic"
 msgstr "Arabsky"
 
 #
-#, fuzzy
 msgid "Are you sure to delete image:"
-msgstr "Opravdu chcete restartovat do"
+msgstr "Opravdu chcete smazat image:"
 
 msgid "Are you sure to purge all deleted user bouquets?"
 msgstr "Opravdu chcete odstranit všechny smazané přehledy?"
@@ -1225,9 +1224,8 @@ msgstr "Opravdu smazat všechny programy pozemního vysílání?"
 msgid "Are you sure to remove this entry?"
 msgstr "Opravdu chcete odstranit tuto položku?"
 
-#, fuzzy
 msgid "Are you sure to restore all deleted images"
-msgstr "Opravdu smazat všechny programy kabelové televize?"
+msgstr "Opravdu obnovit všechna smazaná image?"
 
 #
 msgid ""
@@ -3020,7 +3018,6 @@ msgstr "Zpoždění v milisekundách mezi přetáčením znaků na displeji."
 msgid "Delete"
 msgstr "Smazat"
 
-#, fuzzy
 msgid "Delete Image"
 msgstr "Odstranit image"
 
@@ -3063,9 +3060,8 @@ msgstr "Odstranit časovač"
 msgid "Deleted"
 msgstr "Mazáno"
 
-#, fuzzy
 msgid "Deleted image"
-msgstr "Odstranit image"
+msgstr "Smazané image"
 
 #
 msgid "Deleted items"
@@ -7950,9 +7946,8 @@ msgstr "Obnovit zálohu"
 msgid "Restore defaults"
 msgstr "Obnovit výchozí"
 
-#, fuzzy
 msgid "Restore deleted images"
-msgstr "Obnovit smazané přehledy"
+msgstr "Obnovit smazané image"
 
 msgid "Restore deleted user bouquets"
 msgstr "Obnovit smazané přehledy"
