--- a/po/hu.po
+++ b/po/hu.po
@@ -2967,7 +2967,7 @@ msgstr "Biztos benne, hogy kilép a képernyőbeállítóból?"
 msgid "Do you want to reboot your receiver?"
 msgstr "Szeretné újraindítani a készüléket?"
 
-msgid "Do you want to remove all the crahs logfiles"
+msgid "Do you want to remove all the crash logfiles"
 msgstr "Szeretne eltávolítani minden crash logfile-t?"
 
 msgid "Do you want to remove the package:\n"
