--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -719,7 +719,7 @@ msgid "Abort"
 msgstr "放弃"
 
 msgid "Abort alternatives edit"
-msgstr "中止编辑备选方案"
+msgstr "中止编辑备选频道"
 
 msgid "Abort bouquet edit"
 msgstr "中止编辑自定义组"
@@ -770,7 +770,7 @@ msgid "Add a new title"
 msgstr "增加一个新标题"
 
 msgid "Add alternatives"
-msgstr "增加项目"
+msgstr "增加备选频道"
 
 msgid "Add bookmark"
 msgstr "添加书签"
@@ -1645,10 +1645,10 @@ msgid "Cancel"
 msgstr "取消"
 
 msgid "Cancel any changes to the currently active skin"
-msgstr ""
+msgstr "取消对当前活动皮肤的任何更改"
 
 msgid "Cancel any changes to the currently active skin and exit all menus"
-msgstr ""
+msgstr "取消对当前活动皮肤的任何更改并退出所有菜单"
 
 msgid "Cancel any text changes and exit"
 msgstr "取消任何文本更改并退出"
@@ -1860,7 +1860,7 @@ msgid "Clear playlist"
 msgstr "清除播放列表"
 
 msgid "Client is streaming from this box!"
-msgstr ""
+msgstr "客户端正在从这个接收机串流"
 
 msgid "Clone TV screen to LCD"
 msgstr "克隆电视屏幕到LCD"
@@ -3233,7 +3233,7 @@ msgid "Edit DNS"
 msgstr "编辑 DNS"
 
 msgid "Edit alternatives"
-msgstr "编辑备选方案"
+msgstr "编辑备选频道"
 
 msgid "Edit chapters of current title"
 msgstr "编辑章节当前标题"
@@ -3411,7 +3411,7 @@ msgid "Encryption:"
 msgstr "加密方式:"
 
 msgid "End alternatives edit"
-msgstr "结束备选方案编辑"
+msgstr "结束编辑备选频道"
 
 msgid "End bouquet edit"
 msgstr "结束自定义组编辑"
@@ -4438,7 +4438,7 @@ msgstr "图标"
 msgid ""
 "If disabled, underline characters in file and directory names are not shown "
 "and are replaced with spaces."
-msgstr ""
+msgstr "如果禁用，则不显示文件名和目录名中的下划线字符，并用空格替换。"
 
 msgid ""
 "If enabled, bookmarks will be updated with the new location when you move or "
@@ -5172,6 +5172,8 @@ msgid ""
 "Manufacturer reset in progress\n"
 "Please wait until enigma2 restarts"
 msgstr ""
+"正在重置出厂设置\n"
+"请等待enigma2重新启动"
 
 msgid "Margin after recording (minutes)"
 msgstr "录制后的空白时间(分钟)"
@@ -5939,6 +5941,8 @@ msgid ""
 "Only select 'yes' if you are using a multiswich that requires a DiSEqC Port-"
 "A command signal. For all other setups select 'no'."
 msgstr ""
+"只有在使用需要DiSEqC端口a命令信号的Multiwich时，才选择“是”。对于所有其他设"
+"置，请选择“否”。"
 
 msgid "Open select location"
 msgstr "打开位置选择"
@@ -6941,7 +6945,7 @@ msgid "Remove a nameserver entry"
 msgstr "移除DNS项目"
 
 msgid "Remove all alternatives"
-msgstr "移除所有备选方案"
+msgstr "移除所有备选频道"
 
 msgid "Remove all logfiles"
 msgstr "移除所有日志"
@@ -6968,7 +6972,7 @@ msgid "Remove directory"
 msgstr "移除目录"
 
 msgid "Remove entry"
-msgstr "移除项目"
+msgstr "删除条目"
 
 msgid "Remove from parental protection"
 msgstr "取消家长控制"
@@ -7855,7 +7859,7 @@ msgid "Select the shifted character set for the next character only"
 msgstr "只为下一个字符选择移位字符集"
 
 msgid "Select the time zone within the area or region."
-msgstr ""
+msgstr "选择地域或区域内的时区。"
 
 msgid "Select the tuner that controls the motorised dish."
 msgstr "选择控制电动盘的调谐器。"
@@ -7890,7 +7894,7 @@ msgid "Select video mode"
 msgstr "设置视频模式"
 
 msgid "Select whether your SCR device is externally powered."
-msgstr ""
+msgstr "选择您的SCR设备是否由外部供电。"
 
 msgid "Select wireless network"
 msgstr "选择无线网络"
@@ -7906,12 +7910,13 @@ msgstr ""
 "目前的设备: "
 
 msgid "Select your country. If not available select 'all'."
-msgstr ""
+msgstr "选择你的国家。如果不可用，请选择“全部”。"
 
 msgid ""
 "Select your provider and region. If not present in this list you will need "
 "to select one of the other 'service scan types'."
 msgstr ""
+"选择您的提供商和地区。如果此列表中不存在，则需要选择其他“服务扫描类型”之一。"
 
 msgid "Select your provider, and press OK to start the scan"
 msgstr "选择供应商，按OK开始扫描"
@@ -7919,10 +7924,10 @@ msgstr "选择供应商，按OK开始扫描"
 msgid ""
 "Select your region. If not available change 'Country' to 'all' and select "
 "one of the default alternatives."
-msgstr ""
+msgstr "选择您的地区。如果不可用，将“Country”更改为“all”，并选择一个默认备选。"
 
 msgid "Select your time zone area or region."
-msgstr " 选择您的时区或区域。"
+msgstr "选择您的地域（洲）。"
 
 msgid "Selecting satellites 1 (USALS)"
 msgstr "正在转到卫星1（USALS）"
@@ -7942,7 +7947,7 @@ msgid "Selects video source displayed on the LCD."
 msgstr "选择LCD上显示的视频源。"
 
 msgid "Send 'sourceactive' before zap timers"
-msgstr ""
+msgstr "在切换到计时器之前发送“sourceactive”"
 
 msgid "Send DiSEqC"
 msgstr "发送DiSEqC命令"
@@ -8077,7 +8082,7 @@ msgid "Set fps for external subtitles"
 msgstr "设置外部字幕帧速（fps）"
 
 msgid "Set if You want see status icons, progress bars or nothing."
-msgstr ""
+msgstr "设置是否要查看状态图标、进度条或无。"
 
 msgid "Set interface as default Interface"
 msgstr "将网卡设为默认"
@@ -8217,7 +8222,7 @@ msgid "Show WLAN status"
 msgstr "显示WLAN状态"
 
 msgid "Show alternatives"
-msgstr "显示备用方案"
+msgstr "显示备选频道"
 
 msgid "Show animation while busy"
 msgstr "忙时显示动画"
