--- a/po/cs.po
+++ b/po/cs.po
@@ -10005,18 +10005,15 @@ msgstr "Přepnout kanál dolů"
 msgid "Switch channel up"
 msgstr "Přepnout kanál nahoru"
 
-#, fuzzy
 msgid "Switch on the display during Standby Mode"
-msgstr "Vypnout display v pohotovostním režimu"
+msgstr "Zapnout display v pohotovostním režimu"
 
-#, fuzzy
 msgid "Switch on the display during Suspend Mode"
-msgstr "Vypnout display v režimu pozastavení"
+msgstr "Zapnout display v režimu pozastavení"
 
 #
-#, fuzzy
 msgid "Switch on the display during operation."
-msgstr "Vypnout display během provozu."
+msgstr "Zapnout display během provozu."
 
 msgid "Switch to TV mode"
 msgstr "Přepnout do TV módu"
@@ -10112,7 +10109,7 @@ msgstr ""
 "Pro případné korekce můžete kontaktovat autora\n"
 "na výše uvedené adrese.\n"
 "\n"
-"®10.5.2020"
+"®16.5.2020"
 
 #
 msgid "TS file is too large for ISO9660 level 1!"
@@ -11952,17 +11949,14 @@ msgstr "S chybami:"
 msgid "With popup"
 msgstr "S dialogem"
 
-#, fuzzy
 msgid "With this option you can switch on the display during operation."
-msgstr "Toto nastavení umožňuje vypnout display během provozu."
+msgstr "Toto nastavení umožňuje zapnout display během provozu."
 
-#, fuzzy
 msgid "With this option you can switch on the display in Deep Standby Mode."
-msgstr "Toto nastavení umožňuje vypnout displej v hlubokém spánku."
+msgstr "Toto nastavení umožňuje zapnout displej v hlubokém spánku."
 
-#, fuzzy
 msgid "With this option you can switch on the display in Standby Mode."
-msgstr "Toto nastavení umožňuje vypnout displej v pohotovostním režimu."
+msgstr "Toto nastavení umožňuje zapnout displej v pohotovostním režimu."
 
 msgid "With this option you can switch the LED color or deactivate the LED."
 msgstr "Toto nastavení umožňuje přepnout barvu nebo deaktivovat LED."
