fixed broken bg.po due to illegal wrapping

--- a/po/bg.po
+++ b/po/bg.po
@@ -1604,9 +1604,7 @@ msgstr ""
 "Жълт за връщане обратно към това въведение"
 
 msgid "Can only find a network drive to store the backup this means after the flash the autorestore will not work. Alternativaly you can mount the network drive after the flash and perform a manufacurer reset to autorestore"
-msgstr "Само мрежов диск може да се открие за да се запази резервното копие, което означава че след флашване 
-автоматичното възстановяване няма да работи. Алтернативно може да маунтнете мрежовия диск след флашването и да
-извършите нулиране за да се извърши автоматично възстановяване."
+msgstr "Само мрежов диск може да се открие за да се запази резервното копие, което означава че след флашване автоматичното възстановяване няма да работи. Алтернативно може да маунтнете мрежовия диск след флашването и да извършите нулиране за да се извърши автоматично възстановяване."
 
 msgid "Canada"
 msgstr "Канада"
@@ -2339,8 +2337,7 @@ msgid "Could not find installed channel list."
 msgstr "Не може да се открие инсталиран списък с канали."
 
 msgid "Could not find suitable media - Please remove some downloaded images or insert a media (e.g. USB stick) with sufficiant free space and try again!"
-msgstr "Не може да се открие подходящ носител - Моля изтрийте някои от изтеглените имиджи, или поставете USB стик 
-с достатъчно свободно място и опитайте отново!"
+msgstr "Не може да се открие подходящ носител - Моля изтрийте някои от изтеглените имиджи, или поставете USB стик с достатъчно свободно място и опитайте отново!"
 
 msgid "Could not load medium! No disc inserted?"
 msgstr "Не може да се зареди съдържанието! Не е вкаран диск?"
@@ -5678,8 +5675,7 @@ msgid "Online update of your receiver software."
 msgstr "Мрежова актуализация за софтуера на вашия приемник."
 
 msgid "Only change this setting if you are using a SCR device that has been reprogrammed with a custom programmer. For further information check with the person that reprogrammed the device."
-msgstr "Променете тези настройки само ако използвате SCR който е препрограмиран с персонализиран програматор. За повече
-информация се обърнете към човека програмирал устройството ви."
+msgstr "Променете тези настройки само ако използвате SCR който е препрограмиран с персонализиран програматор. За повече информация се обърнете към човека програмирал устройството ви."
 
 msgid "Only extensions."
 msgstr "Само разширения."
