--- a/po/bg.po
+++ b/po/bg.po
@@ -7561,7 +7561,7 @@ msgid "Select your region. If not available change 'Country' to 'all' and select
 msgstr "Изберете Вашия регион. Ако не е наличен, променете ‘Страна’ на ‘всички’ и изберете една от тези по подразбиране."
 
 msgid "Select your time zone area or region."
-msgstr "Изберете вашата часовата зона или регион."
+msgstr "Изберете вашата часова зона или регион."
 
 msgid "Selecting satellites 1 (USALS)"
 msgstr "Избор сателити 1 (USALS)"
