--- a/po/cs.po
+++ b/po/cs.po
@@ -262,9 +262,9 @@ msgstr "%d kB/s"
 msgid "%d min"
 msgstr "%d min"
 
-#, fuzzy, python-format
+#, python-format
 msgid "%d minute"
-msgid_plural "%d minuts"
+msgid_plural "%d minutes"
 msgstr[0] "%d minuta"
 msgstr[1] "%d minuty"
 msgstr[2] "%d minut"
@@ -9382,7 +9382,7 @@ msgstr "Zeměpisná délka"
 
 #, python-format
 msgid "Skin & Resolution: %s (%sx%s)\n"
-msgstr "Skin & Rozlišení: %s (%sx%s)\n"
+msgstr "Skin a rozlišení: %s (%sx%s)\n"
 
 #
 msgid "Skin Selection Actions"
@@ -10118,7 +10118,7 @@ msgstr ""
 "Pro případné korekce můžete kontaktovat autora\n"
 "na výše uvedené adrese.\n"
 "\n"
-"®20.6.2020"
+"®23.6.2020"
 
 #
 msgid "TS file is too large for ISO9660 level 1!"
