NL translation update; thanks Frenske

--- a/po/nl.po
+++ b/po/nl.po
@@ -3999,7 +3999,7 @@ msgid "Format"
 msgstr "Formaat"
 
 msgid "Forward volume keys"
-msgstr "Volumetoetsen doorsturen"
+msgstr "Volumetoetsen doorsturen naar de TV"
 
 msgid "Frame size in full view"
 msgstr "Framegrootte in vol beeld"
@@ -6714,7 +6714,7 @@ msgid "Put TV in standby"
 msgstr "Zet de TV in stand-by"
 
 msgid "Put receiver in standby"
-msgstr "Schakel de ontvanger naar "
+msgstr "Schakel de ontvanger naar stand-by"
 
 msgid "Python frontend for /tmp/mmi.socket"
 msgstr "Python frontend voor /tmp/mmi.socket"
@@ -9000,7 +9000,7 @@ msgstr "Tekst"
 msgid "TRANSLATOR_INFO"
 msgstr ""
 "Deze vertaling wordt u aangeboden door het OpenPLi team.\n"
-"De laatste aanpassingen in de vertaling zijn gedaan op 27 mei 2020.\n"
+"De laatste aanpassingen in de vertaling zijn gedaan op 25 juni 2020.\n"
 "Voor aanvullingen of opmerkingen stuurt u een mail naar translators@openpli.org."
 
 msgid "TS file is too large for ISO9660 level 1!"
