fr.po for rc branch

--- a/po/fr.po
+++ b/po/fr.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-05-16 18:29+0200\n"
-"PO-Revision-Date: 2020-05-16 18:35+0200\n"
+"POT-Creation-Date: 2020-06-24 23:59+0200\n"
+"PO-Revision-Date: 2020-06-25 00:02+0200\n"
 "Last-Translator: Pr2\n"
 "Language-Team: french\n"
 "Language: fr\n"
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n!=1);\n"
-"X-Generator: Poedit 2.2.4\n"
+"X-Generator: Poedit 2.0.6\n"
 
 msgid ""
 "\n"
@@ -559,10 +559,10 @@ msgid "< Current >"
 msgstr "< Actuel >"
 
 msgid "< Default + Picon >"
-msgstr "< Défaut + Picon >"
+msgstr "< Défaut+Picon >"
 
 msgid "< Default >"
-msgstr "< Défaut >"
+msgstr "< Par défaut >"
 
 msgid "< Emergency >"
 msgstr "< Urgence >"
@@ -6348,7 +6348,7 @@ msgstr "Appuyez sur OK pour avoir des détails sur %s"
 
 #, python-format
 msgid "Press OK to keep the currently selected%s skin."
-msgstr "Appuyez sur OK pour activer le thème sélectionné %s."
+msgstr "Appuyez sur OK pour conserver le thème actuellement sélectionné %s."
 
 msgid "Press OK to scan"
 msgstr "Appuyez sur OK pour lancer la recherche"
@@ -8594,11 +8594,20 @@ msgstr "Sélection des sous-titres..."
 msgid "Subtitle settings"
 msgstr "Paramètres sous-titres"
 
+msgid "Subtitle show/hide..."
+msgstr "Sous-titres affichés/masqués..."
+
 msgid "Subtitles"
 msgstr "Sous-titres"
 
 msgid "Subtitles Settings"
 msgstr "Paramètres des sous-titres"
+
+msgid "Subtitles disabled"
+msgstr "Sous-titres désactivés"
+
+msgid "Subtitles enabled"
+msgstr "Sous-titres activés"
 
 msgid "Succeeded:"
 msgstr "Réussi:"
@@ -9374,6 +9383,9 @@ msgstr "Bascule les nouvelles insertions de texte avant ou écrase le texte exis
 
 msgid "Toggle show/hide"
 msgstr "Inverser afficher/cacher"
+
+msgid "Toggle subtitles show/hide"
+msgstr "Basculer les sous-titres affichés/masqués"
 
 msgid "Toggle the tv and the radio player..."
 msgstr "Bascule entre le mode TV et le lecteur radio..."
